--- a/api/package.json
+++ b/api/package.json
@@ -3,9 +3,11 @@
 	"version": "1.0.0",
 	"description": "",
 	"main": "index.js",
+	"type": "commonjs",
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1",
-		"dev": "nodemon index.js"
+		"test": "mocha ./tests/*.test.js",
+		"scss_convert": "sass --watch ./assets/scss/index.scss:./assets/css/index.css",
+		"dev": "concurrently \"nodemon index.js\" \"npm run scss_convert\""
 	},
 	"keywords": [],
 	"author": "",
@@ -18,6 +20,7 @@
 	"dependencies": {
 		"bcryptjs": "^2.4.3",
 		"bootstrap": "^5.3.3",
+		"concurrently": "^8.2.2",
 		"cors": "^2.8.5",
 		"dotenv": "^16.4.5",
 		"express": "^4.19.2",
@@ -25,9 +28,12 @@
 		"gsap": "^3.12.5",
 		"jquery": "^3.7.1",
 		"jsonwebtoken": "^9.0.2",
+		"mocha": "^10.4.0",
 		"nodemon": "^3.1.3",
 		"nunjucks": "^3.2.4",
 		"pg": "^8.12.0",
-		"sequelize": "^6.37.3"
+		"sass": "^1.77.4",
+		"sequelize": "^6.37.3",
+		"supertest": "^7.0.0"
 	}
 }
