--- a/api/package.json
+++ b/api/package.json
@@ -31,6 +31,7 @@
 		"jquery": "^3.7.1",
 		"jsonwebtoken": "^9.0.2",
 		"mocha": "^10.4.0",
+		"multer": "^1.4.5-lts.1",
 		"nodemon": "^3.1.3",
 		"nunjucks": "^3.2.4",
 		"pg": "^8.12.0",
