--- a/dev.env
+++ b/dev.env
@@ -5,16 +5,20 @@
 
 # 2. (OPTIONAL) Specify PORT(outer) for the DB, if you want to use custom port(outer) for connection to docker containers. DB_HOST must not be changed!
 
+# 3. (OPTIONAL) Email reply to the users is not set finally in this App and uses Ethereal email service just for development and testing.
+#               However You can specify SERVER_EMAIL to set from what Email replies would be sent.
+
 # 3. (IMPORTANT) Specify DB_NAME, DB_USERNAME and DB_PASSWORD with Your own data.
 
 # P.S.:
-# _HOST='****' - must be a string;
-# _PORT=**** - must be an integer (without brackets).
+# *_HOST='****' - must be a string;
+# *_PORT=**** - must be an integer (without brackets).
 # 
 # Default values:
 #
 # SERVER_HOST='0.0.0.0'
 # SERVER_PORT_OUTER=3001
+# SERVER_EMAIL='server123@example.com'
 # DB_HOST='db'
 # DB_PORT_OUTER=5433
 #
@@ -29,6 +33,7 @@
 # DB_HOST='db'
 # DB_PORT_OUTER=5433
 # not only for docker-container:
+SERVER_EMAIL='server123@example.com'
 DB_NAME=''
 DB_USERNAME=''
 DB_PASSWORD=''
