--- a/dev.env
+++ b/dev.env
@@ -1,14 +1,14 @@
 # README
 # --------------------
 
-# 1. (OPTIONAL) Specify HOST/PORT(outer) for the SERVER, if you want to use custom host:port(outer) for connection to docker containers;
+# 1. (OPTIONAL) Specify HOST/PORT_OUTER for the SERVER, if you want to use custom host:port(outer) for connection to docker containers;
 
-# 2. (OPTIONAL) Specify PORT(outer) for the DB, if you want to use custom port(outer) for connection to docker containers. DB_HOST must not be changed!
+# 2. (OPTIONAL) Specify PORT_OUTER for the DB, if you want to use custom port(outer) for connection to docker containers. DB_HOST='db' and must not be changed!
 
 # 3. (OPTIONAL) Email reply to the users is not set finally in this App and uses Ethereal email service just for development and testing.
 #               However You can specify SERVER_EMAIL to set from what Email replies would be sent.
 
-# 3. (IMPORTANT) Specify DB_NAME, DB_USERNAME and DB_PASSWORD with Your own data.
+# 3. (IMPORTANT) Specify DB_NAME, DB_USERNAME and DB_PASSWORD same as POSTGRES_DB, POSTGRES_USER and POSTGRES_PASSWORD with Your own data.
 
 # P.S.:
 # *_HOST='****' - must be a string;
@@ -27,16 +27,19 @@
 # --------------------
 
 # EXPRESS_JS
-# for docker-container only:
+# - for docker-container only:
 # SERVER_HOST='0.0.0.0'
 # SERVER_PORT_OUTER=3001
 # DB_HOST='db'
 # DB_PORT_OUTER=5433
-# not only for docker-container:
+# - not only for docker-container:
 SERVER_EMAIL='server123@example.com'
 DB_NAME=''
 DB_USERNAME=''
 DB_PASSWORD=''
 
 # PostgresQL
-# for docker-container:
+# - for docker-container only:
+POSTGRES_DB=''
+POSTGRES_USER=''
+POSTGRES_PASSWORD=''
