--- a/server/package.json
+++ b/server/package.json
@@ -4,11 +4,11 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "scss": "sass --watch ./assets/scss/index.scss:./assets/css/index.css",
     "start:dev": "nodemon index.js",
     "start": "node index.js",
     "format": "eslint . --fix && prettier --write .",
-    "swagger": "node ./services/swaggerConfig.js"
+    "swagger": "node ./services/swaggerConfig.js",
+    "build:static": "webpack"
   },
   "dependencies": {
     "bootstrap": "^5.3.3",
@@ -24,7 +24,6 @@
     "nodemon": "^3.1.3",
     "nunjucks": "^3.2.4",
     "pg": "^8.12.0",
-    "sass": "^1.77.4",
     "sequelize": "^6.37.3",
     "swagger-autogen": "^2.23.7",
     "swagger-ui-express": "^5.0.1",
@@ -32,11 +31,20 @@
     "zod": "^3.24.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.26.10",
+    "@babel/preset-env": "^7.26.9",
     "@eslint/js": "^9.23.0",
+    "babel-loader": "^10.0.0",
+    "css-loader": "^7.1.2",
     "eslint": "^9.23.0",
     "eslint-plugin-prettier": "^5.2.3",
     "globals": "^16.0.0",
-    "prettier": "^3.5.3"
+    "prettier": "^3.5.3",
+    "sass": "^1.86.0",
+    "sass-loader": "^16.0.5",
+    "style-loader": "^4.0.0",
+    "webpack": "^5.98.0",
+    "webpack-cli": "^6.0.1"
   },
   "browserslist": [
     "last 2 versions",
