--- a/server/package.json
+++ b/server/package.json
@@ -52,6 +52,9 @@
     "webpack": "^5.98.0",
     "webpack-cli": "^6.0.1"
   },
+  "imports": {
+    "#server/*": "./*"
+  },
   "browserslist": [
     "last 2 versions",
     "> 1%",
