--- a/server/package.json
+++ b/server/package.json
@@ -36,6 +36,7 @@
     "@babel/core": "^7.26.10",
     "@babel/preset-env": "^7.26.9",
     "@eslint/js": "^9.23.0",
+    "@faker-js/faker": "^9.6.0",
     "babel-jest": "^29.7.0",
     "babel-loader": "^10.0.0",
     "css-loader": "^7.1.2",
