Add SMTP creds fields in env, remove jld code

--- a/.env.public
+++ b/.env.public
@@ -17,3 +17,8 @@ COOKIE_SECRET='xcysbhxu1yqyxzznu2faeqy5g8ay7i5vl97uq4zdkyrq6lgsfn8o0er'
 JWT_SECRET='kacmo7uh4djg32glhasgqcd139724m1h4v0btkh5p7epcio7e81q79'
 JWT_ACCESS_EXPIRES_IN='60min'
 JWT_REFRESH_EXPIRES_IN='10080min'
+
+SMTP_HOST=
+SMTP_PORT=
+SMTP_USER=
+SMTP_PASSWORD=
